Add new option to i18n.

--- a/Kinovea/Languages/RootLang.resx
+++ b/Kinovea/Languages/RootLang.resx
@@ -711,4 +711,7 @@
   <data name="formWindowProperties_StartProcess" xml:space="preserve">
     <value>Start process</value>
   </data>
+  <data name="prefPanelGeneral_EnableAllLanguages" xml:space="preserve">
+    <value>Enable all languages</value>
+  </data>
 </root>
